added basic query

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1,3 +1,9 @@
+.half-rule { 
+    margin-left: 0;
+    text-align: left;
+    width: 50%;
+ }
+
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
